# ecvrf

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md
.github/workflows/: ci.yml
c/: Makefile  ecvrf.c  ecvrf.h  ecvrf_cli.c  ecvrf_test.c  gen_vectors.py
csharp/: Ecvrf.slnx
csharp/Ecvrf/: Ecvrf.cs
csharp/Ecvrf.Cli/: Ecvrf.Cli.csproj  Program.cs
csharp/Ecvrf.Tests/: Ecvrf.Tests.csproj  EcvrfTests.cs
go/: ecvrf.go  ecvrf_test.go  go.mod
go/cmd/ecvrf-cli/: main.go
haskell/: ecvrf.cabal
haskell/cli/: Main.hs
haskell/src/Crypto/: ECVRF.hs
haskell/test/: Main.hs
kotlin/: build.gradle.kts  settings.gradle.kts
kotlin/src/main/kotlin/ecvrf/: Cli.kt  Ecvrf.kt
kotlin/src/test/kotlin/ecvrf/: EcvrfTest.kt
python/: ecvrf.py  generate.py  pyproject.toml
rust/: Cargo.toml
rust/examples/: cli.rs
rust/src/: lib.rs
rust/tests/: vectors.rs
scripts/: cross-validate.sh  node-cli.mjs  python-cli.py  solidity-cli.sh
solana/: Cargo.toml
solana/examples/: cli.rs
solana/src/: lib.rs
solana/tests/: vectors.rs
solidity/: foundry.toml
solidity/script/: Cli.s.sol
solidity/src/: ECVRFBase.sol  ECVRFProver.sol  ECVRFVerifier.sol  Secp256k1.sol
solidity/test/: ECVRFTest.t.sol
swift/: Package.swift
swift/Sources/ECVRF/: ECVRF.swift
swift/Sources/ECVRFCli/: main.swift
swift/Sources/ECVRFTest/: main.swift
typescript/: package-lock.json  package.json  tsconfig.json
typescript/src/: ecvrf.ts
typescript/test/: ecvrf.test.js
vectors/: vectors.json
zig/: build.zig  build.zig.zon
zig/src/: cli.zig  ecvrf.zig
