cabal-version: 2.4
name:          ecvrf
version:       0.1.0.0
synopsis:      RFC 9381 ECVRF-SECP256K1-SHA256-TAI
license:       MIT
build-type:    Simple

library
  exposed-modules: Crypto.ECVRF
  build-depends:
    , base            >=4.16 && <5
    , bytestring      >=0.11
    , cryptohash-sha256 >=0.11
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -O2

executable ecvrf-cli
  main-is:        Main.hs
  build-depends:
    , base            >=4.16 && <5
    , bytestring      >=0.11
    , ecvrf
  hs-source-dirs: cli
  default-language: Haskell2010
  ghc-options: -Wall -O2

test-suite ecvrf-test
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends:
    , base            >=4.16 && <5
    , bytestring      >=0.11
    , ecvrf
    , aeson           >=2.0
    , text            >=2.0
    , filepath
  hs-source-dirs: test
  default-language: Haskell2010
  ghc-options: -Wall
